deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: production-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: nginx

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
        - name: nginx
          image: sujithmsuji/devops-nginx:IMAGE_VERSION
          imagePullPolicy: Always

          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: "50m"
              memory: "32Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          volumeMounts:
            - name: nginx-storage
              mountPath: /usr/share/nginx/html/data

      volumes:
        - name: nginx-storage
          persistentVolumeClaim:
            claimName: nginx-pvc
