service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: production-app

spec:
  selector:
    app: nginx

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
